Fix responsiveness on smaller phones

--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,13 @@
     flex-direction: column;
     gap: 1rem;
     height: inherit;
-    width: inherit;
-    margin: 5rem;
+    width: 90%;
     margin-top: 1rem;
 }
 .store-items {
     display: grid;
     gap: 2rem 1rem;
-    grid-template-columns: repeat(5, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 .store-item {
     border: 1px solid rgb(219, 168, 230);
@@ -50,5 +49,20 @@
     & img {
         grid-row: 1/-1;
         grid-column: 1/2;
+    }
+}
+@media screen and (max-width: 600px) {
+    .item-li-shopping-cart {
+        grid-template-rows: repeat(4, min-content);
+        & img {
+            max-width: 300px;
+            grid-row: 1/2;
+            grid-column: 1/-1;
+            justify-self: center;
+        }
+        & h2,
+        p {
+            grid-column: 1/-1;
+        }
     }
 }
